--- a/thinc/templates/base.html
+++ b/thinc/templates/base.html
@@ -1,68 +1,48 @@
 {% load staticfiles %}
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-    <title>
-         {% block title %}thInc.{% endblock title %}
-    </title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    {% block header %}{% endblock header %}
+    <link rel="stylesheet" href="{% static 'css/styleJS.css' %}">
 </head>
+<body>
 
-<ul class="navigation">
-    <li class="nav-item">
-        <a href="{% url 'home' %}">Home</a>
-    </li>
-    <li class="nav-item">
-        <a href="{% url 'contact' %}">Contact</a>
-    </li>
-    <li class="nav-item">
-        <a href="{% url 'about' %}">About Us</a>
-    </li>
-    <li class="nav-item">
-        <a href="{% url 'browse_by_name' %}">Browse by Name</a>
-    </li>
-    <li class="nav-item">
-        <a href="{% url 'browse_by_votes' %}">Browse by Votes</a>
-    </li>
+<div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="{% url 'home' %}">Home</a>
+    <a href="{% url 'contact' %}">Contact</a>
+    <a href="{% url 'about' %}">About</a>
+    <a href="{% url 'browse_by_votes' %}">Browse</a>
     {% if user.is_authenticated %}
-    <li class="nav-item">
-        <a href="{% url 'my_ideas' %}">My Ideas</a>
-    </li>
-    <li class="nav-item">
-        <a href="{% url 'auth_logout' %}">Logout</a>
-    </li>
+    <a href="{% url 'my_ideas' %}">My Ideas</a>
+    <a href="{% url 'auth_logout' %}">Logout</a>
     {% else %}
-    <li class="nav-item">
-        <a href="{% url 'registration_register' %}">Register</a>
-    </li>
-    <li class="nav-item">
-        <a href="{% url 'auth_login' %}">Login</a>
-    </li>                     
+    <a href="{% url 'registration_register' %}">Register</a>
+    <a href="{% url 'auth_login' %}">Login</a>                  
     {% endif %}
-</ul>
-            
+</div>
 
-<input type="checkbox" id="nav-trigger" class="nav-trigger" />
-<label for="nav-trigger"></label>
-
-<div class="site-wrap">
-    <div class="header">
-        <center>
-        <a id="logo" href="{% url 'home' %}">
-            <img id="logo" src="{% static 'images/thinc-logo.png' %}" alt="thInc." width=100%/>
-        </a>
-        </center>
-        {% if user.is_authenticated %}
-        <a href="{% url 'create_idea' %}"><button id="create_idea" type="button">Create Idea!</button></a>
-        {% endif %}
+<div id="main">
+    <div id="header">
+        <div class="quarter">
+            <span id="burger" onclick="openNav()">&#9776;</span>
+        </div>
+        <div class="half">
+            <a id="logo" href="{% url 'home' %}">
+                <img id="logo" src="{% static 'images/thinc-logo.png' %}" alt="thInc." width=200px/>
+            </a>
+        </div>
+        <div class="quarter">
+            {% if user.is_authenticated %}
+            <a href="{% url 'create_idea' %}"><button id="create_idea" type="button">Create Idea!</button></a>
+            {% endif %}
+        </div>
     </div>
-
-    <div class="content">
+    <div id="content">
         {% block content %}{% endblock content %}
         {% block footer %}{% endblock footer %}
     </div>
-
 </div>
 
-</html>
+<script type="text/javascript" src="{% static 'js/myScript.js' %}"></script>
+</body>
+</html> 
