--- a/thinc/templates/index.html
+++ b/thinc/templates/index.html
@@ -6,49 +6,54 @@
 {% load staticfiles %}
 
 {% block content %}
-	<div class="banner">
+	<!-- <div class="banner">
         <img class="background" src="{% static 'images/background.jpeg' %}" alt="background" >
-    </div>
+    </div> -->
 
-    <div id="topIdeas">
+    <div class="idea_section">
         <h1>Top Ideas</h1>
-        <div class="ideas">
-            {% for idea in ideas %}
-            <div class="idea">
-                <h2>
-                	<a href="{% url 'idea_detail' slug=idea.slug %}">{{ idea.name }}
-            		</a>
-                </h2>
-                <h3>{{ idea.overview }}</h3>
-                <h4 class="publishDate">{{ idea.published_date }}</h4> 
-                <p>{{ idea.votes }} | {{ idea.description|truncatewords:10 }}</p>
-                <form role="form" method="post">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <input type="submit" name="voteup" value="+">
-                </form>
+            {% for idea in top_ideas %}
+                <div class="idea">
+                    <div class="voting">
+                        <form role="form" method="post">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <input type="submit" name="voteup" value="+">
+                        </form>
+                        <h3>{{ idea.votes }} votes</h3>
+                    </div>
+                    <div class="the_rest">
+                        <h2>
+                        	<a href="{% url 'idea_detail' slug=idea.slug %}">{{ idea.name }}
+                    		</a>
+                        </h2>
+                        <h3>{{ idea.overview }} | <span class="published_date">{{ idea.published_date }}</span></h3>
+                        <p>{{ idea.description|truncatewords:50 }}</p>
+                    </div>
+                </div>
             {% endfor %}
-            </div>
-        </div>
     </div>
-    <div class="latestIdeas">
+    <div class="idea_section">
         <h1>Latest Ideas</h1>
-        <div class="ideas">
             {% for idea in ideas %}
-            <div class="idea">
-                <h2>
-                    <a href="{% url 'idea_detail' slug=idea.slug %}">{{ idea.name }}
-                    </a>
-                </h2>
-                <h3>{{ idea.overview }}</h3>
-                <h4 class="published_date">{{ idea.published_date }}</h4> 
-                <p>{{ idea.votes }} | {{ idea.description|truncatewords:10 }}</p>
-                <form role="form" method="post">
-                    {% csrf_token %}
-                    <input type="submit" value="+">
-                </form>
+                <div class="idea">
+                    <div class="voting">
+                        <form role="form" method="post">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <input type="submit" name="voteup" value="+">
+                        </form>
+                        <h3>{{ idea.votes }} votes</h3>
+                    </div>
+                    <div class="the_rest">
+                        <h2>
+                            <a href="{% url 'idea_detail' slug=idea.slug %}">{{ idea.name }}
+                            </a>
+                        </h2>
+                        <h3>{{ idea.overview }} | <span class="published_date">{{ idea.published_date }}</span></h3>
+                        <p>{{ idea.description|truncatewords:50 }}</p>
+                    </div>
+                </div>
             {% endfor %}
-            </div>
-        </div>
     </div>
 {% endblock content %}
