--- a/thinc/static/css/styleJS.css
+++ b/thinc/static/css/styleJS.css
@@ -2,29 +2,10 @@ body {
     font-family: "Arial Rounded MT Bold", Helvetica, sans-serif;
     transition: background-color .5s;
     margin: 0;
-    background-color: #191970;
+    background-image: url("../images/noise.png");
 }
 
-h1, h3, h4, h5, h6 {
- margin: 0;
- padding: 0;
- font-weight: normal;
-}
-
-a {
-  text-decoration: none;
-  color: #191970;
-}
-
-a:hover {
-  color: #3366ff;
-}
-
-h2 {
-  font-size: 30px;
-  margin: 0 0 3px;
-  padding: 0;
- }
+ /* ================== NAV BAR ============== */
 
 .sidenav {
     height: 100%;
@@ -61,17 +42,14 @@ h2 {
     margin-left: 50px;
 }
 
+#sidenavmenu {
+  margin: 40px 0 0 0;
+}
+
 #main {
     transition: margin-left .5s;
     padding: 0;
     margin: 0;
-}
-
-#content {
-  padding: 0 10%;
-  background-color: #e6e6e6;
-  border-radius: 5px;
-  margin: 20px;
 }
 
 #burger {
@@ -79,23 +57,15 @@ h2 {
   cursor:pointer;
   margin: 20px;
   display:inline-block;
-  float:left
+  float:left;
 }
 
-.banner {
-  position: absolute;
-  left: 0;
-  top: 110px;
-  height: 200px;
-  overflow-y: hidden;
-  margin: 0px;
-}
+/* =================== MAIN STYLING ================== */
 
 
-/* END SIDEBAR STYLING */
+/*      HEADER        */
 #header {
   height: 100px;
-  background-color: white;
   border-radius: 5px;
   margin: 20px;
 }
@@ -111,6 +81,23 @@ h2 {
   height: 100%;
   float: left;
 }
+/*        CONTENT       */
+#content {
+  padding: 0;
+  margin: 0 10%;
+}
+
+
+/*        INDEX:        */
+
+.banner {
+  position: absolute;
+  left: 0;
+  top: 110px;
+  height: 200px;
+  overflow-y: hidden;
+  margin: 0px;
+}
 
 a#logo {
   width: 50%;
@@ -121,39 +108,55 @@ img#logo {
   margin: 5px 0;
 }
 
-.idea_section {
-  margin: 20px;
+.idea_section:hover .idea_outer {
   border-radius: 5px;
-  padding: 10px;
+  transition: 0.5s;
+  background-color: #3366ff;
+}
+
+.idea_section:hover .idea {
+  border-radius: 5px;
+  transition: 0.5s;
+}
+
+.idea_section:hover a {
+  color: #191970;
+  transition: 0.5s;
+}
+
+.idea_outer {
+  margin: 10px 20px 50px;
+  padding: 6px;
+  background-color: #191970;
+  border-radius: 76px;
+  transition: 0.5s;
 }
 
 .idea {
-  margin: 10px 10px 20px;
   padding: 10px;
+  border-radius: 70px;
   background-color: white;
-  border-radius: 5px;
+  min-height: 100px;
+  transition: 0.5s;
 }
 
 .voting {
-  width: 100px;
-  float: left;
+  margin: 50px 0;
+  width: 40px;
+  float: right;
+  clear: both;
   display: block;
 }
 
-.voting form {
-  padding: 20px 40px;
-}
-
-.voting input {
-  padding: 10px;
-}
-
-.voting h3 {
-  margin: 10px;
+.votes {
+  padding-left: 10px;
+  margin: 50px 0;
+  width: 40px;
+  float: left;
 }
 
 .the_rest {
-  margin: 0 0 0 100px;
+  margin: 0 50px;
 }
 
 .published_date {
@@ -161,6 +164,47 @@ img#logo {
   color: #696969;
   font-size: .6em;
 }
+
+/* ================== TAGS ====================== */
+
+a {
+  text-decoration: none;
+  color: #3366ff;
+  transition: 0.5s;
+}
+
+a:hover {
+  color: #3366ff;
+}
+
+h1, h3, h4, h5, h6 {
+ margin: 0;
+ padding: 0;
+ font-weight: normal;
+}
+
+h2 {
+  font-size: 30px;
+  margin: 0 0 3px;
+  padding: 0;
+ }
+
+ ul, li {
+  margin-left: 0;
+  padding-left: 0;
+  list-style: none;
+ }
+
+ li:nth-of-type(odd) {
+  padding-left: 75px;
+ }
+
+ li:nth-of-type(even) {
+  padding-right: 75px;
+ }
+
+
+/* ==================== BUTTONS ================== */
 
 button#create_idea {
   font-size: 15px;
@@ -171,6 +215,8 @@ button#create_idea {
   padding: 10px 5px;
   border-radius: 5px;
 }
+
+/* ====================== MEDIA QUERIES ====================== */
 
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
