--- a/thinc/templates/registration/login.html
+++ b/thinc/templates/registration/login.html
@@ -15,4 +15,7 @@
     	Forgot your password?
     	</a>
     </p>
+    <p>
+        <a href="{% url 'registration_register' %}">Don't have an account? Register here</a>
+    </p>
 {% endblock content %}
