--- a/thinc/static/css/styleJS.css
+++ b/thinc/static/css/styleJS.css
@@ -67,7 +67,7 @@ body {
 #header {
   height: 100px;
   border-radius: 5px;
-  margin: 20px;
+  margin: 5px;
 }
 
 .quarter {
@@ -82,21 +82,44 @@ body {
   float: left;
 }
 /*        CONTENT       */
-#content {
+.page_content {
   padding: 0;
   margin: 0 10%;
+}
+
+.username {
+  font-size: .8em;
+  margin: 0 0 0 10px;
+}
+
+.username i {
+  font-size: 1em;
+  margin: 0;
+  color: #696969;
 }
 
 
 /*        INDEX:        */
 
 .banner {
-  position: absolute;
-  left: 0;
-  top: 110px;
-  height: 200px;
+  height: 400px;
+  width: 100%;
+  overflow-x: hidden;
   overflow-y: hidden;
-  margin: 0px;
+  background-image: url("../images/background.png");
+  margin: 0 0 20px;
+}
+
+.banner img {
+  opacity: 0.8;
+}
+
+.banner h1 {
+  text-indent: 50px;
+  margin: 30px;
+  color: white;
+  font-size: 70px;
+  float: left;
 }
 
 a#logo {
@@ -130,6 +153,7 @@ img#logo {
   background-color: #191970;
   border-radius: 76px;
   transition: 0.5s;
+  box-shadow: 3px 3px 3px grey;
 }
 
 .idea {
@@ -165,16 +189,47 @@ img#logo {
   font-size: .6em;
 }
 
-/* ================== TAGS ====================== */
+/*        IDEA DETAIL         */
+.idea_detail .idea_outer {
+  margin: 10px 20px 50px;
+  padding: 6px;
+  background-color: #191970;
+  border-radius: 76px;
+  transition: 0.5s;
+  box-shadow: 3px 3px 3px grey;
+  min-height: 400px;
+}
 
+.idea_detail .idea {
+  padding: 50px 10px;
+  border-radius: 70px;
+  background-color: white;
+  min-height: 100px;
+  transition: 0.5s;
+  min-height: 400px;
+}
+
+/* ================== TAGS ====================== */
 a {
   text-decoration: none;
+}
+
+a.idea_name {
   color: #3366ff;
   transition: 0.5s;
 }
 
-a:hover {
-  color: #3366ff;
+a.idea_name:hover {
+  color: #191970;
+}
+
+a.edit {
+  color: black;
+}
+
+a.edit:hover {
+  color: #696969;
+  text-decoration: underline;
 }
 
 h1, h3, h4, h5, h6 {
@@ -184,24 +239,32 @@ h1, h3, h4, h5, h6 {
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 2em;
   margin: 0 0 3px;
   padding: 0;
  }
 
- ul, li {
-  margin-left: 0;
-  padding-left: 0;
-  list-style: none;
- }
+h3 {
+font-size: 1.2em;
+}
 
- li:nth-of-type(odd) {
-  padding-left: 75px;
- }
+ul, li {
+margin-left: 0;
+padding-left: 0;
+list-style: none;
+}
 
- li:nth-of-type(even) {
-  padding-right: 75px;
- }
+li:nth-of-type(odd) {
+padding-left: 75px;
+}
+
+li:nth-of-type(even) {
+padding-right: 75px;
+}
+
+p {
+font-size: 16px;
+}
 
 
 /* ==================== BUTTONS ================== */
