--- a/thinc/templates/ideas/create_idea.html
+++ b/thinc/templates/ideas/create_idea.html
@@ -9,5 +9,6 @@
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Submit" />
+        <input type="submit" name="submit" value="Cancel" formnovalidate="formnovalidate">
     </form>
 {% endblock content%}
