--- a/thinc/templates/registration/registration_form.html
+++ b/thinc/templates/registration/registration_form.html
@@ -9,5 +9,6 @@
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Submit" />
+        <input type="submit" name="cancel" value="Cancel" /> 
     </form>
 {% endblock content %}
