--- a/thinc/templates/user_info.html
+++ b/thinc/templates/user_info.html
@@ -1,13 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}
-    {{ idea.name }} - {{ block.super }}
+    {{  }} - {{ block.super }}
 {% endblock title %}
 
 {% block content %}
-<ul>
-    {% for idea in ideas %}
-    <li>
-        <div class="idea_section">
+        <div class="idea_detail">
             <div class="idea_outer">
                 <div class="idea">
                     <div class="voting">
@@ -21,17 +18,17 @@
                         <h3>{{ idea.votes }}</h3>
                     </div>
                     <div class="the_rest">
-                        <h2>
-                            <a class="idea_name" href="{% url 'idea_detail' slug=idea.slug %}">{{ idea.name }}
-                            </a>
-                        </h2>
+                        <h2 style="color: #3366ff;">{{ idea.name }}</h2>
                         <h3>{{ idea.overview }} | <span class="published_date">{{ idea.published_date }}</span></h3>
                         <p>{{ idea.description|truncatewords:50 }}</p>
+                         {% if user == idea.user %}
+                        <p>
+                            <a class="edit" href="{% url 'edit_idea' slug=idea.slug %}">Edit your idea!</a>
+                        </p>
+                    {% endif %}
                     </div>
                 </div>
             </div>
         </div>
-    </li>
-    {% endfor %}
-</ul>
+    </div>
 {% endblock content %}
