--- a/thinc/templates/500.html
+++ b/thinc/templates/500.html
@@ -4,6 +4,8 @@
 {% endblock title %}
 
 {% block content %}
+<div class="block">
     <h1>500 Error</h1>
     <p>You've run into an error!</p>
+</div>
 {% endblock content %}
