--- a/thinc/templates/about.html
+++ b/thinc/templates/about.html
@@ -4,6 +4,7 @@
 {% endblock title %}
 
 {% block content %}
+<div class="block">
     <h1>About thInc.</h1>
     <p>
     	If you've got the next great app idea, thInc is for you!
@@ -29,5 +30,5 @@
 		</li>
 	</ul>
 	</p>
-	
+</div>
 {% endblock content %}
