--- a/thinc/templates/contact.html
+++ b/thinc/templates/contact.html
@@ -4,10 +4,12 @@
 {% endblock title %}
 
 {% block content %}
+<div class="block">
     <h1>Contact</h1>
 	<form role="form" action="" method="post">
 		{% csrf_token %}
 		{{ form.as_p }}
 		<button type="submit">Submit</button>
 	</form>
+</div>
 {% endblock %}
