--- a/thinc/templates/ideas/my_ideas.html
+++ b/thinc/templates/ideas/my_ideas.html
@@ -4,6 +4,7 @@
 {% endblock title %}
 
 {% block content %}
+<div class="block">
 <ul>
     {% for idea in ideas %}
     <li>
@@ -34,4 +35,5 @@
     </li>
     {% endfor %}
 </ul>
+</div>
 {% endblock content %}
