--- a/thinc/templates/registration/register.html
+++ b/thinc/templates/registration/register.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+    Register - {{ block.super }}
+{% endblock title %}
 
 {% block content %}
   <h2>Sign up</h2>
