--- a/thinc/templates/registration/registration_complete.html
+++ b/thinc/templates/registration/registration_complete.html
@@ -4,6 +4,8 @@
 {% endblock title %}
 
 {% block content %}
+<div class="block">
     <h1>Registration Complete</h1>
     <p>Your account has been registered!</p>
+</div>
 {% endblock content %}
