--- a/thinc/templates/404.html
+++ b/thinc/templates/404.html
@@ -4,6 +4,8 @@
 {% endblock title %}
 
 {% block content %}
+<div class="block">
     <h1>404 Error</h1>
     <p>You've run into a page that doesn't exist!</p>
+</div>
 {% endblock content %}
