--- a/thinc/templates/ideas/create_idea.html
+++ b/thinc/templates/ideas/create_idea.html
@@ -4,6 +4,7 @@
 {% endblock title %} 
 
 {% block content %}
+<div class="block">
     <h1>Create an Idea</h1>
     <form role="form" action="" method="post">
         {% csrf_token %}
@@ -11,4 +12,5 @@
         <input type="submit" value="Submit" />
         <input type="submit" name="submit" value="Cancel" formnovalidate="formnovalidate">
     </form>
+</div>
 {% endblock content%}
