--- a/thinc/templates/registration/logout.html
+++ b/thinc/templates/registration/logout.html
@@ -4,6 +4,8 @@
 {% endblock title %}
 
 {% block content %}
+<div class="block">
     <h1>Logged Out</h1>
     <p>You have been logged out!</p>
+</div>
 {% endblock content %}
