--- a/thinc/templates/registration/password_change_done.html
+++ b/thinc/templates/registration/password_change_done.html
@@ -4,6 +4,8 @@
 {% endblock title %}
 
 {% block content %}
+<div class="block">
     <h1>Password Change Done</h1>
     <p>Your password was changed.</p>
+</div>
 {% endblock content %}
