--- a/thinc/templates/registration/password_change_form.html
+++ b/thinc/templates/registration/password_change_form.html
@@ -4,10 +4,12 @@
 {% endblock title %}
 
 {% block content %}
+<div class="block">
     <h1>Password Change Form</h1>
     <form role="form" action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Submit" />
     </form>
+</div>
 {% endblock content %}
