--- a/thinc/templates/registration/password_reset_complete.html
+++ b/thinc/templates/registration/password_reset_complete.html
@@ -4,6 +4,8 @@
 {% endblock title %}
 
 {% block content %}
+<div class="block">
     <h1>Password Reset Complete</h1>
     <p>Your password has been reset!</p>
+</div>
 {% endblock content %}
