--- a/thinc/templates/registration/password_reset_confirm.html
+++ b/thinc/templates/registration/password_reset_confirm.html
@@ -4,6 +4,7 @@
 {% endblock title %}
 
 {% block content %}
+<div class="block">
     {% if validlink %}
     <h1>Confirm Password Reset</h1>
     <p>Please enter your new password twice so we can verify you
@@ -18,4 +19,5 @@
     <p>The password reset link was invalid, possibly because it has
     already been used. Please request a new password reset.</p>
     {% endif %}
+</div>
 {% endblock content %}
