--- a/thinc/templates/registration/password_reset_done.html
+++ b/thinc/templates/registration/password_reset_done.html
@@ -4,6 +4,8 @@
 {% endblock title %}
 
 {% block content %}
+<div class="block">
     <h1>Password Reset Complete</h1>
     <p>Check your email for a link to reset your password!</p>
+</div>
 {% endblock content %}
